--- a/htdocs/view/scss/top.scss
+++ b/htdocs/view/scss/top.scss
@@ -262,35 +262,57 @@
             &__ribbon {
                 position: absolute;
                 top: -6px;
-                left: -6px;
+                left: -9px;
                 height: 20px;
-                padding: 5px 10px;
-                padding-right: 40px;
+                padding: 5px 30px;
+                padding-right: 30px;
                 color: black;
                 background: variables.$light_purple;
                 line-height: 10px;
     
-                &::before {
+                // &::before {
+                //     content: '';
+                //     position: absolute;
+                //     top: 100%;
+                //     left: 0px;
+                //     border: 3px solid transparent;
+                //     border-top: 3px solid variables.$dark_purple;
+                //     border-right: 3px solid variables.$dark_purple;
+                // }
+    
+                // &::after {
+                //     position: absolute;
+                //     top: 0;
+                //     right: -10px;
+                //     content: '';
+                //     border-top: 10px solid variables.$light_purple;
+                //     border-right: 10px solid transparent;
+                //     border-bottom: 10px solid variables.$light_purple;
+                //     border-left: 0 solid variables.$light_purple;
+                // }
+
+                &-before {
                     content: '';
                     position: absolute;
                     top: 100%;
                     left: 0px;
                     border: 3px solid transparent;
-                    border-top: 3px solid variables.$dark_purple;
-                    border-right: 3px solid variables.$dark_purple;
+                    // border-top: 3px solid variables.$dark_purple;
+                    // border-right: 3px solid variables.$dark_purple;
                 }
     
-                &::after {
+                &-after {
                     position: absolute;
                     top: 0;
                     right: -10px;
                     content: '';
-                    border-top: 10px solid variables.$light_purple;
-                    border-right: 10px solid transparent;
-                    border-bottom: 10px solid variables.$light_purple;
-                    border-left: 0 solid variables.$light_purple;
+                    // border-top: 10px solid variables.$light_purple;
+                    // border-right: 10px solid transparent;
+                    // border-bottom: 10px solid variables.$light_purple;
+                    // border-left: 0 solid variables.$light_purple;
                 }
             }
+            
     
             &__title {
                 width: 60%;
