--- a/htdocs/view/scss/dm.css
+++ b/htdocs/view/scss/dm.css
@@ -1,5 +1,6 @@
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   padding: 0;
   word-wrap: break-word;
@@ -32,8 +33,11 @@ main {
 }
 
 ::-webkit-scrollbar-thumb {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#D0368A), color-stop(99%, #708AD4));
+  background-image: -webkit-linear-gradient(top, #D0368A 0%, #708AD4 99%);
   background-image: linear-gradient(180deg, #D0368A 0%, #708AD4 99%);
-  box-shadow: inset 2px 2px 2px 0 rgba(255, 255, 255, 0.5);
+  -webkit-box-shadow: inset 2px 2px 2px 0 rgba(255, 255, 255, 0.5);
+          box-shadow: inset 2px 2px 2px 0 rgba(255, 255, 255, 0.5);
   border-radius: 10px;
 }
 
@@ -96,9 +100,18 @@ select {
 
 .btn {
   position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 15px 0;
   width: 120px;
   height: 50px;
@@ -112,6 +125,7 @@ select {
   border-radius: 10px;
   cursor: pointer;
   z-index: 1;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 .btn--normal::before {
@@ -123,6 +137,7 @@ select {
   height: calc(100% - 5px);
   border: 3px solid #FDCAEC;
   border-radius: 10px;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 .btn--normal:hover::before {
@@ -141,6 +156,7 @@ select {
   height: calc(100% - 5px);
   border: 3px solid #CBCDFF;
   border-radius: 10px;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 .btn--back:hover::before {
@@ -154,8 +170,14 @@ select {
 .back-position {
   width: 100%;
   padding: 0 10%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .back-position .btn {
   top: -18px;
@@ -246,30 +268,15 @@ select {
   padding: 100px 0 20px 0;
 }
 .dm__all .contents {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
   height: 100%;
 }
-.dm__all .contents .icon-position {
-  display: flex;
-  justify-content: flex-end;
-  width: 70px;
-  margin-right: 30px;
-}
-.dm__all .contents .icon-position .icon {
-  width: 70px;
-  height: 70px;
-  border-radius: 50%;
-  border: 3px solid #CBCDFF;
-}
 .dm__all .contents .detail-position {
-  width: 90%;
-}
-.dm__all .contents .detail-position table {
   width: 100%;
-}
-.dm__all .contents .detail-position__receive, .dm__all .contents .detail-position__send {
-  padding-bottom: 10px;
 }
 .dm__all .contents .detail-position__receive p, .dm__all .contents .detail-position__send p {
   position: relative;
@@ -284,8 +291,23 @@ select {
   top: 50%;
 }
 .dm__all .contents .detail-position__receive {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: left;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.dm__all .contents .detail-position__receive .icon {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 3px solid #CBCDFF;
+}
+.dm__all .contents .detail-position__receive p {
+  margin-left: 10px;
 }
 .dm__all .contents .detail-position__receive p::before {
   left: -8px;
@@ -302,8 +324,14 @@ select {
   z-index: 1;
 }
 .dm__all .contents .detail-position__send {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: right;
+  -webkit-box-pack: right;
+  -webkit-justify-content: right;
+      -ms-flex-pack: right;
+          justify-content: right;
 }
 .dm__all .contents .detail-position__send P::before {
   right: -8px;
@@ -319,37 +347,70 @@ select {
   border-left: 6px solid #CBCDFF;
   z-index: 1;
 }
+.dm__all .contents .detail-position__receivetime, .dm__all .contents .detail-position__sendtime {
+  font-size: 12px;
+  padding-bottom: 10px;
+}
+.dm__all .contents .detail-position__receivetime {
+  padding-left: 60px;
+}
+.dm__all .contents .detail-position__sendtime {
+  text-align: right;
+}
 .dm__all .send-position {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 100%;
   height: 100%;
+  margin-top: 60px;
 }
-.dm__all .send-position__message {
+.dm__all .send-position__messages {
+  margin: 0 30px 0 0;
   width: 60%;
-  height: 30px;
-  margin-right: 15px;
+}
+.dm__all .send-position__messages #error {
+  visibility: hidden;
+  color: red;
+}
+.dm__all .send-position__messages .text {
+  width: 100%;
+  height: 60px;
+  resize: none;
+  margin-right: 30px;
   border: 3px solid #CBCDFF;
 }
-.dm__all .send-position__message:focus {
+.dm__all .send-position__messages .text:focus {
   outline: none;
   background-color: #E7E8FF;
 }
-.dm__all .send-position .btn {
+.dm__all .send-position__btn-count {
+  margin-top: 30px;
+}
+.dm__all .send-position__btn-count .btn {
   margin: 0;
-  width: 10%;
+  width: 80px;
   height: 33px;
 }
-.dm__all .send-position .btn--normal::before {
+.dm__all .send-position__btn-count .btn--normal::before {
   top: -6px;
   left: -6px;
 }
-.dm__all .send-position .btn--normal:hover {
+.dm__all .send-position__btn-count .btn--normal:hover {
   background-color: #FFF0FA;
 }
-.dm__all .send-position .btn--normal:hover::before {
+.dm__all .send-position__btn-count .btn--normal:hover::before {
   top: 0;
   left: 0;
+}
+.dm__all .send-position__btn-count .count-text {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
 }/*# sourceMappingURL=dm.css.map */
