--- a/htdocs/view/scss/adminpage.css
+++ b/htdocs/view/scss/adminpage.css
@@ -1,5 +1,6 @@
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   padding: 0;
   word-wrap: break-word;
@@ -32,8 +33,11 @@ main {
 }
 
 ::-webkit-scrollbar-thumb {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#D0368A), color-stop(99%, #708AD4));
+  background-image: -webkit-linear-gradient(top, #D0368A 0%, #708AD4 99%);
   background-image: linear-gradient(180deg, #D0368A 0%, #708AD4 99%);
-  box-shadow: inset 2px 2px 2px 0 rgba(255, 255, 255, 0.5);
+  -webkit-box-shadow: inset 2px 2px 2px 0 rgba(255, 255, 255, 0.5);
+          box-shadow: inset 2px 2px 2px 0 rgba(255, 255, 255, 0.5);
   border-radius: 10px;
 }
 
@@ -96,9 +100,18 @@ select {
 
 .btn {
   position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 15px 0;
   width: 120px;
   height: 50px;
@@ -112,6 +125,7 @@ select {
   border-radius: 10px;
   cursor: pointer;
   z-index: 1;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 .btn--normal::before {
@@ -123,6 +137,7 @@ select {
   height: calc(100% - 5px);
   border: 3px solid #FDCAEC;
   border-radius: 10px;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 .btn--normal:hover::before {
@@ -141,6 +156,7 @@ select {
   height: calc(100% - 5px);
   border: 3px solid #CBCDFF;
   border-radius: 10px;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 .btn--back:hover::before {
@@ -202,80 +218,97 @@ select {
   border-left: solid 15px #FDCAEC;
 }
 
-.page-all {
-  margin: 50px auto;
-  width: 80%;
-  height: 450px;
-  display: flex;
-}
-.page-all .page-left {
-  width: 50%;
-}
-.page-all .page-left .icon-name-position {
-  margin: 0 0 0 auto;
+.search-position {
   width: 100%;
-  height: 30%;
-  display: flex;
-}
-.page-all .page-left .icon-name-position .icon-position {
-  width: 50%;
-  height: 100%;
-  display: flex;
-  justify-content: right;
-  padding-right: 10px;
-}
-.page-all .page-left .icon-name-position .icon-position .icon {
-  width: 120px;
-  height: 120px;
-  border: 3px solid #CBCDFF;
-}
-.page-all .page-left .name-position {
-  width: 50%;
-  height: 100%;
-}
-.page-all .page-left .name-position .name {
-  width: 100%;
-  max-width: 300px;
-  height: 50%;
-  padding: 10px 30px 10px 10px;
-}
-.page-all .page-left .name-position .name__handlename, .page-all .page-left .name-position .name__id {
-  border-bottom: 3px solid #CBCDFF;
-}
-.page-all .page-left .name-position .name__handlename p, .page-all .page-left .name-position .name__id p {
-  display: inline-block;
-  width: 30px;
+  margin-top: 50px;
   text-align: center;
 }
-.page-all .page-left .btn-position {
+.search-position .search {
+  width: 70%;
+  max-width: 800px;
   margin: 0 auto;
-  width: 70%;
-  height: 70%;
 }
-.page-all .page-left .btn-position .btn {
-  margin: 50px 0 0 auto;
-  width: 70%;
-}
-.page-all .page-right {
-  width: 50%;
-}
-.page-all .page-right .search-position {
-  width: 100%;
-  height: 20%;
-}
-.page-all .page-right .search-position .search {
-  padding: 10px 20px;
-}
-.page-all .page-right .search-position .search__box {
-  width: 70%;
+.search-position .search__box {
+  width: 85%;
   height: 30px;
   border: 3px solid #FDCAEC;
 }
-.page-all .page-right .search-position .search__box:focus {
+.search-position .search__box:focus {
   outline: none;
   background-color: #FFF0FA;
 }
-.page-all .page-right .search-position .search__btn {
+.search-position .search input[type=radio] {
+  display: none;
+}
+.search-position .search input[type=radio] + label {
+  display: none;
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  padding-left: 25px;
+  padding-right: 5px;
+}
+.search-position .search input[type=radio] + label::before {
+  content: "";
+  position: absolute;
+  display: block;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 20px;
+  height: 20px;
+  margin-top: -10px;
+  left: 0;
+  top: 50%;
+  border: 2px solid #FDCAEC;
+  background-color: #FFF0FA;
+  border-radius: 50%;
+}
+.search-position .search input[type=radio]:checked + label::after {
+  content: "";
+  position: absolute;
+  display: block;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 12px;
+  height: 12px;
+  margin-top: -6px;
+  top: 50%;
+  left: 4px;
+  background-color: deeppink;
+  border-radius: 50%;
+  -webkit-animation: click 0.2s;
+          animation: click 0.2s;
+}
+@-webkit-keyframes click {
+  0% {
+    position: absolute;
+    margin-top: -1px;
+    left: 10px;
+    height: 0px;
+    width: 0px;
+  }
+  100% {
+    height: 12px;
+    width: 12px;
+  }
+}
+@keyframes click {
+  0% {
+    position: absolute;
+    margin-top: -1px;
+    left: 10px;
+    height: 0px;
+    width: 0px;
+  }
+  100% {
+    height: 12px;
+    width: 12px;
+  }
+}
+.search-position .search__checkbox {
+  margin: 0 3px;
+}
+.search-position .search__btn {
   width: 40px;
   height: 30px;
   background-color: #FDCAEC;
@@ -283,25 +316,184 @@ select {
   color: white;
   cursor: pointer;
 }
-.page-all .page-right .category-position {
-  width: 80%;
-  padding-left: 10px;
-}
-.page-all .page-right .category-position li {
-  float: left;
-  width: 50%;
-  padding: 0 10px;
+.search-position .search__condition {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  list-style: none;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: left;
+  position: relative;
+  margin: 20px auto;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 5px;
+  color: #555;
+  font-size: 16px;
+  border: 3px solid #CBCDFF;
+  border-radius: 10px;
 }
-.page-all .page-right .category-position li .btn {
+.search-position .search__condition::before {
+  content: "";
+  position: absolute;
+  top: -24px;
+  left: 50%;
+  margin-left: -15px;
+  border: 12px solid transparent;
+  border-bottom: 12px solid #FFF;
+  z-index: 2;
+}
+.search-position .search__condition::after {
+  content: "";
+  position: absolute;
+  top: -30px;
+  left: 50%;
+  margin-left: -17px;
+  border: 14px solid transparent;
+  border-bottom: 14px solid #CBCDFF;
+  z-index: 1;
+}
+.search-position .search__condition .char-center {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  position: relative;
+  margin: 0 20px;
+}
+.search-position .search__condition .char-center::after {
+  content: "";
+  z-index: -1;
+  position: absolute;
+  left: 0;
+  bottom: 25px;
+  width: 100%;
+  height: 12px;
+  border-radius: 10px;
+  background: -webkit-repeating-linear-gradient(135deg, #CBCDFF, #CBCDFF 2px, white 3px, white 5px);
+  background: repeating-linear-gradient(-45deg, #CBCDFF, #CBCDFF 2px, white 3px, white 5px);
+}
+
+.page-all {
+  margin: 50px auto;
+  width: 80%;
+  height: 450px;
+}
+.page-all .page-top {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   width: 100%;
 }
-.page-all .page-right .category-position li:nth-child(1) .btn--normal:hover, .page-all .page-right .category-position li:nth-child(4) .btn--normal:hover, .page-all .page-right .category-position li:nth-child(5) .btn--normal:hover, .page-all .page-right .category-position li:nth-child(8) .btn--normal:hover, .page-all .page-right .category-position li:nth-child(9) .btn--normal:hover {
+.page-all .page-top .icon-name-position {
+  width: 50%;
+  height: 30%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+.page-all .page-top .icon-name-position .icon-position {
+  width: 50%;
+  height: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: right;
+  -webkit-justify-content: right;
+      -ms-flex-pack: right;
+          justify-content: right;
+  padding-right: 10px;
+}
+.page-all .page-top .icon-name-position .icon-position .icon {
+  width: 120px;
+  height: 120px;
+  border: 3px solid #CBCDFF;
+}
+.page-all .page-top .name-position {
+  width: 50%;
+  height: 100%;
+}
+.page-all .page-top .name-position .name {
+  width: 100%;
+  max-width: 300px;
+  height: 50%;
+  padding: 10px 30px 10px 10px;
+}
+.page-all .page-top .name-position .name__handlename, .page-all .page-top .name-position .name__id {
+  border-bottom: 3px solid #CBCDFF;
+}
+.page-all .page-top .name-position .name__handlename p, .page-all .page-top .name-position .name__id p {
+  display: inline-block;
+  width: 30px;
+  text-align: center;
+}
+.page-all .page-top .btn-position {
+  width: 40%;
+  height: 70%;
+  padding-top: 40px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+.page-all .page-top .btn-position .btn {
+  margin: 0 20px 0 0;
+  width: 45%;
+  max-width: 250px;
+}
+.page-all .page-middle {
+  margin-top: 50px;
+  width: 100%;
+}
+.page-all .page-middle .category-position {
+  width: 80%;
+  max-width: 1000px;
+  height: 270px;
+  overflow-x: scroll;
+  padding: 10px 0 0 10px;
+  margin: 0 auto;
+  border-radius: 10px;
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.2) inset;
+          box-shadow: 0 0 5px rgba(0, 0, 0, 0.2) inset;
+}
+.page-all .page-middle .category-position li {
+  float: left;
+  width: 50%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  list-style: none;
+}
+.page-all .page-middle .category-position li .btn {
+  width: 50%;
+}
+.page-all .page-middle .category-position li:nth-child(1) .btn--normal:hover, .page-all .page-middle .category-position li:nth-child(4) .btn--normal:hover, .page-all .page-middle .category-position li:nth-child(5) .btn--normal:hover, .page-all .page-middle .category-position li:nth-child(8) .btn--normal:hover, .page-all .page-middle .category-position li:nth-child(9) .btn--normal:hover {
   background-color: #E7E8FF;
 }
-.page-all .page-right .category-position li:nth-child(1) .btn--normal::before, .page-all .page-right .category-position li:nth-child(4) .btn--normal::before, .page-all .page-right .category-position li:nth-child(5) .btn--normal::before, .page-all .page-right .category-position li:nth-child(8) .btn--normal::before, .page-all .page-right .category-position li:nth-child(9) .btn--normal::before {
+.page-all .page-middle .category-position li:nth-child(1) .btn--normal::before, .page-all .page-middle .category-position li:nth-child(4) .btn--normal::before, .page-all .page-middle .category-position li:nth-child(5) .btn--normal::before, .page-all .page-middle .category-position li:nth-child(8) .btn--normal::before, .page-all .page-middle .category-position li:nth-child(9) .btn--normal::before {
   border: 3px solid #CBCDFF;
 }
 
