--- a/htdocs/view/scss/userslist.css
+++ b/htdocs/view/scss/userslist.css
@@ -1,5 +1,6 @@
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   padding: 0;
   word-wrap: break-word;
@@ -32,8 +33,11 @@ main {
 }
 
 ::-webkit-scrollbar-thumb {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#D0368A), color-stop(99%, #708AD4));
+  background-image: -webkit-linear-gradient(top, #D0368A 0%, #708AD4 99%);
   background-image: linear-gradient(180deg, #D0368A 0%, #708AD4 99%);
-  box-shadow: inset 2px 2px 2px 0 rgba(255, 255, 255, 0.5);
+  -webkit-box-shadow: inset 2px 2px 2px 0 rgba(255, 255, 255, 0.5);
+          box-shadow: inset 2px 2px 2px 0 rgba(255, 255, 255, 0.5);
   border-radius: 10px;
 }
 
@@ -96,9 +100,18 @@ select {
 
 .btn {
   position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 15px 0;
   width: 120px;
   height: 50px;
@@ -112,6 +125,7 @@ select {
   border-radius: 10px;
   cursor: pointer;
   z-index: 1;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 .btn--normal::before {
@@ -123,6 +137,7 @@ select {
   height: calc(100% - 5px);
   border: 3px solid #FDCAEC;
   border-radius: 10px;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 .btn--normal:hover::before {
@@ -141,6 +156,7 @@ select {
   height: calc(100% - 5px);
   border: 3px solid #CBCDFF;
   border-radius: 10px;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 .btn--back:hover::before {
@@ -154,8 +170,14 @@ select {
 .title-position {
   width: 100%;
   padding: 0 10%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .title-position .btn {
   top: -18px;
@@ -224,21 +246,85 @@ select {
 .search-position {
   width: 100%;
   margin-top: 25px;
-  text-align: center;
 }
 .search-position .search {
-  width: 70%;
-  max-width: 800px;
+  width: 90%;
+  max-width: 1500px;
   margin: 0 auto;
+  padding: 10px;
+  border-radius: 10px;
+  -webkit-box-shadow: 0 0 5px #CBCDFF;
+          box-shadow: 0 0 5px #CBCDFF;
 }
-.search-position .search__box {
-  width: 85%;
-  height: 30px;
+.search-position .search__condition1 {
+  width: 100%;
+}
+.search-position .search__condition1 tr {
+  width: 100%;
+}
+.search-position .search__condition1 th {
+  text-align: center;
+  width: 10%;
+  padding: 10px 0;
+}
+.search-position .search__condition1 td {
+  width: 20%;
+}
+.search-position .search__condition1 td .input {
+  width: 100%;
   border: 3px solid #FDCAEC;
 }
-.search-position .search__box:focus {
+.search-position .search__condition1 td .input:focus {
   outline: none;
   background-color: #FFF0FA;
+}
+.search-position .search__condition1 td strong {
+  margin-right: 15px;
+}
+.search-position .search input[type=checkbox] {
+  display: none;
+}
+.search-position .search input[type=checkbox] + label {
+  display: none;
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  padding-left: 25px;
+  padding-right: 5px;
+  margin-right: 5px;
+}
+.search-position .search input[type=checkbox] + label::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 25px;
+  height: 25px;
+  margin-top: -20px;
+  left: 0;
+  top: 50%;
+  border: 3px solid;
+  border-color: #FDCAEC;
+  background-color: white;
+  border-radius: 5px;
+}
+.search-position .search input[type=checkbox]:checked + label::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 20px;
+  height: 10px;
+  margin-top: -15px;
+  top: 50%;
+  left: 3px;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  border-bottom: 4px solid;
+  border-left: 4px solid;
+  border-color: deeppink;
+}
+.search-position .search .left {
+  padding-top: 10px;
+  text-align: end;
 }
 .search-position .search__btn {
   width: 40px;
@@ -259,8 +345,12 @@ select {
 }
 .tablearea table .th_tr {
   border: 3px solid #CBCDFF;
+  background-color: #E7E8FF;
 }
-.tablearea table tr:nth-child(2n) td {
+.tablearea table tr {
+  border: 1px solid #CBCDFF;
+}
+.tablearea table tr td:nth-of-type(2n) {
   background-color: #F1F1F1;
 }
 .tablearea table tr .sort {
@@ -278,10 +368,12 @@ select {
   border-right: 1px solid gray;
 }
 .tablearea table tr .sort::before {
-  transform: translateY(-6px) rotate(-45deg);
+  -webkit-transform: translateY(-6px) rotate(-45deg);
+          transform: translateY(-6px) rotate(-45deg);
 }
 .tablearea table tr .sort::after {
-  transform: translateY(0px) rotate(135deg);
+  -webkit-transform: translateY(0px) rotate(135deg);
+          transform: translateY(0px) rotate(135deg);
 }
 .tablearea table tr .sort.asc::before {
   border-top: 1px solid black;
