--- a/htdocs/view/scss/mypage.css
+++ b/htdocs/view/scss/mypage.css
@@ -361,6 +361,18 @@ select {
   font-family: "Font Awesome 5 Free";
   -webkit-text-stroke: 1px white;
 }
+.mypage-bottom .tab .contents__top, .mypage-bottom .tab .contents__bottom, .mypage-bottom .tab .contents__response {
+  width: 100%;
+  height: 50px;
+}
+.mypage-bottom .tab .contents__top {
+  display: flex;
+  border-bottom: 2px solid #CBCDFF;
+}
+.mypage-bottom .tab .contents__bottom {
+  display: flex;
+  justify-content: space-between;
+}
 .mypage-bottom .tab .contents__main {
   position: relative;
   margin-top: 20px;
@@ -368,13 +380,36 @@ select {
   border: 3px solid #CBCDFF;
   background-color: white;
 }
-.mypage-bottom .tab .contents__top, .mypage-bottom .tab .contents__bottom {
-  width: 100%;
-  height: 50px;
+.mypage-bottom .tab .contents__imgicon {
+  margin: auto 0;
+  padding: 0 10px;
+  text-align: center;
 }
-.mypage-bottom .tab .contents__top {
+.mypage-bottom .tab .contents__imgicon i {
+  font-size: 1.5em;
+}
+.mypage-bottom .tab .contents__imgicon p {
+  font-size: 10px;
+}
+.mypage-bottom .tab .contents__response {
   display: flex;
-  border-bottom: 2px solid #CBCDFF;
+  border-bottom: 3px solid #CBCDFF;
+  border-left: 3px solid #CBCDFF;
+  border-right: 3px solid #CBCDFF;
+}
+.mypage-bottom .tab .contents__res {
+  width: 60%;
+  height: 100%;
+  border-right: 2px solid #CBCDFF;
+  overflow: hidden;
+  display: flex;
+  justify-content: space-between;
+}
+.mypage-bottom .tab .contents__resdatetime {
+  width: 40%;
+  height: 100%;
+  overflow: hidden;
+  padding: 12px;
 }
 .mypage-bottom .tab .contents__sub {
   display: flex;
@@ -392,6 +427,7 @@ select {
   line-height: 28px;
   border-bottom: 3px solid #CBCDFF;
   border-left: 3px solid #CBCDFF;
+  border-right: 3px solid #CBCDFF;
 }
 .mypage-bottom .tab .contents__delete a {
   color: red;
@@ -405,6 +441,7 @@ select {
   text-align: center;
   line-height: 28px;
   border-bottom: 3px solid #CBCDFF;
+  border-left: 3px solid #CBCDFF;
   border-right: 3px solid #CBCDFF;
 }
 .mypage-bottom .tab .contents__recover a {
@@ -433,31 +470,25 @@ select {
 .mypage-bottom .tab .contents__ribbon {
   position: absolute;
   top: -6px;
-  left: -6px;
+  left: -9px;
   height: 20px;
-  padding: 5px 10px;
-  padding-right: 40px;
-  background: #E7E8FF;
+  padding: 5px 30px;
+  padding-right: 30px;
   line-height: 10px;
 }
-.mypage-bottom .tab .contents__ribbon::before {
+.mypage-bottom .tab .contents__ribbon-before {
   position: absolute;
   content: "";
   top: 100%;
   left: 0px;
   border: 3px solid transparent;
-  border-top: 3px solid #CBCDFF;
-  border-right: 3px solid #CBCDFF;
 }
-.mypage-bottom .tab .contents__ribbon::after {
+.mypage-bottom .tab .contents__ribbon-after {
   position: absolute;
   content: "";
   top: 0;
   right: -10px;
-  border-top: 10px solid #E7E8FF;
   border-right: 10px solid transparent;
-  border-bottom: 10px solid #E7E8FF;
-  border-left: 0 solid #E7E8FF;
 }
 .mypage-bottom .tab .contents__title {
   width: 60%;
@@ -470,11 +501,99 @@ select {
   height: 100%;
   overflow: hidden;
 }
-.mypage-bottom .tab #new_threadtab:checked ~ #thread_content,
-.mypage-bottom .tab #new_responsetab:checked ~ #response_content,
-.mypage-bottom .tab #goodtab:checked ~ #good_content {
+.mypage-bottom .tab #my_threadtab:checked ~ #mythread_content,
+.mypage-bottom .tab #my_responsetab:checked ~ #myresponse_content,
+.mypage-bottom .tab #my_goodtab:checked ~ #mygood_content {
   display: block;
+}
+.mypage-bottom .tab .page-btn {
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+}
+.mypage-bottom .tab .page-btn--previous, .mypage-bottom .tab .page-btn--next, .mypage-bottom .tab .page-btn--first, .mypage-bottom .tab .page-btn--last {
+  border: 1px solid lightgray;
+  margin: 0 3px;
+  text-decoration: none;
+  padding: 3px 8px;
+}
+.mypage-bottom .tab .page-btn--first {
+  border-radius: 30px 10px 10px 30px;
+}
+.mypage-bottom .tab .page-btn--last {
+  border-radius: 10px 30px 30px 10px;
+}
+.mypage-bottom .tab .page-btn .page-text {
+  text-decoration: none;
+}
+.mypage-bottom .tab .page-btn .page-text--previous, .mypage-bottom .tab .page-btn .page-text--first {
+  position: relative;
+  padding-left: 12px;
+}
+.mypage-bottom .tab .page-btn .page-text--previous::before, .mypage-bottom .tab .page-btn .page-text--first::before {
+  content: "";
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 6px 8px 6px 0;
+  border-color: transparent #CBCDFF transparent transparent;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  margin-top: -6px;
+}
+.mypage-bottom .tab .page-btn .page-text--first::after {
+  content: "";
+  left: -1px;
+  top: 20%;
+  position: absolute;
+  width: 2px;
+  height: 12px;
+  border-radius: 3px;
+  background: #CBCDFF;
+}
+.mypage-bottom .tab .page-btn .page-text--next, .mypage-bottom .tab .page-btn .page-text--last {
+  position: relative;
+  padding-right: 12px;
+}
+.mypage-bottom .tab .page-btn .page-text--next::before, .mypage-bottom .tab .page-btn .page-text--last::before {
+  content: "";
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 6px 0 6px 8px;
+  border-color: transparent transparent transparent #CBCDFF;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  margin-top: -6px;
+}
+.mypage-bottom .tab .page-btn .page-text--last::after {
+  content: "";
+  right: -1px;
+  top: 20%;
+  position: absolute;
+  width: 2px;
+  height: 12px;
+  border-radius: 3px;
+  background: #CBCDFF;
+}
+.mypage-bottom .tab .page-btn .enable-text {
+  color: black;
+}
+.mypage-bottom .tab .page-btn .disable-text {
+  opacity: 0.5;
+}
+.mypage-bottom .tab .page-btn .enable-color:hover {
+  background: #E7E8FF;
+}
+.mypage-bottom .tab .page-btn .disable-color {
+  background-color: #F1F1F1;
 }
 .mypage-bottom .tab input:checked + .tab_item {
   background-color: #E7E8FF;
+}
+.mypage-bottom .pagecount {
+  text-align: center;
+  margin-top: 10px;
 }/*# sourceMappingURL=mypage.css.map */
